# claude_skills

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS_GUIDE.md  CLAUDE.md  Makefile  NexusAI_Product_Launch.pptx  README.md  pptx_bridge.py  pptx_edit.sh  pptx_editting_session.md  pptx_hot_reload.py  pptx_live_editor.py  pptx_live_preview.sh  pptx_simple_preview.py  pptx_web_viewer.py  product_launch.js  pyproject.toml
.claude/: settings.json
.claude/agents/: README.md  auto-error-resolver.md  chinese-language-configurator.md  code-architecture-reviewer.md  code-refactor-master.md  data-pipeline-specialist.md  documentation-architect.md  model-conversion-specialist.md  training-specialist.md  web-research-specialist.md
.claude/commands/: code_review.md  debug_error.md  dependency_update.md  explain_code.md  fix_bug.md  generate_docs.md  generate_tests.md  git_commit.md  implement_feature.md  lint_code.md  openpi-multi-agent.md  performance_profile.md  refactor_code.md  repo_audit.md  run_cli.md  run_tests.md  security_audit.md  vla-openpi-dataset-analysis.md
.claude/skills/: repo_audit.md
.claude/skills/auto_pr/: SKILL.md
.claude/skills/code_review/: SKILL.md
.claude/skills/debug_error/: SKILL.md
.claude/skills/dependency_update/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
claude_code_agent_design/: _template.md  claude_code_agent_design.md  workflow-patterns-examples.md
skills/: bugfix.md  repo_audit.md
src/demo_app/: cli.py  github_utils.py
tests/: conftest.py  test_cli.py  test_math_utils.py
(+17 files in other folders)
